hphp/hack/test/typecheck/expression_trees/pipe2.php.exp
File "pipe2.php", line 9, characters 70-124:
Wrong number of type arguments (expected 0, got 3) (Typing[4101])
  File "expr_tree.hhi", line 13, characters 7-16:
  Definition is here
File "pipe2.php", line 21, characters 30-52:
Typing error (Typing[4110])
  File "pipe2.php", line 21, characters 30-52:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "pipe2.php", line 9, characters 70-124:
  But got `ExampleDsl`
File "pipe2.php", line 21, characters 33-50:
Invalid argument (Typing[4110])
  File "expr_tree.hhi", line 200, characters 5-47:
  Expected `Spliceable<ExampleDsl, mixed, [unresolved]>`
  File "pipe2.php", line 9, characters 70-124:
  But got `ExampleDsl`
